Fix menu rendering on small screens

--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -4,7 +4,7 @@
 /* Main */
 .navigation {
   margin-top: 70px;
-  height: 110px;
+  min-height: 110px;
 }
 
 .navigation li {
